Moved GPU kernels into separate directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -arch=sm_52 -gencode=arch=compute_52
 
 string(REPLACE '--machine 32' '-m64' CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS}")
 
+include_directories(kernels)
 include_directories(/usr/local/cuda/samples/common/inc)
 
 cuda_add_executable(jpeg_cuda
@@ -17,8 +18,8 @@ cuda_add_executable(jpeg_cuda
         cuda_jpeg_8/huffman.c
         cuda_jpeg_8/quantization.c
         cuda_jpeg_8/jpeg_compressor_CUDA.c
-        cuda_jpeg_8/dctCUDAv2.cu
-        cuda_jpeg_8/dctCUDAv2.h
+        cuda_jpeg_8/kernels/dctCUDAv2.cu
+        cuda_jpeg_8/kernels/dctCUDAv2.h
         cuda_jpeg_8/jpeg_writer.c
         )
 target_link_libraries(jpeg_cuda m)
