Initial RGB->YCrCb CUDA conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ string(REPLACE '--machine 32' '-m64' CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS}")
 include_directories(kernels)
 include_directories(/usr/local/cuda/samples/common/inc)
 
-cuda_add_executable(jpeg_cuda
+cuda_add_executable(cuda_jpeg_compressor
         cuda_jpeg_8/dct.c
         cuda_jpeg_8/bmp_loader.c
         cuda_jpeg_8/ycc_converter.c
@@ -22,4 +22,52 @@ cuda_add_executable(jpeg_cuda
         cuda_jpeg_8/kernels/dctCUDAv2.h
         cuda_jpeg_8/jpeg_writer.c
         )
-target_link_libraries(jpeg_cuda m)
+
+target_link_libraries(cuda_jpeg_compressor m)
+
+cuda_add_executable(cuda_full_jpeg_compressor
+        cuda_jpeg_8/dct.c
+        cuda_jpeg_8/bmp_loader.c
+        cuda_jpeg_8/ycc_converter.c
+        cuda_jpeg_8/timer.c
+        cuda_jpeg_8/huffman.c
+        cuda_jpeg_8/quantization.c
+        cuda_jpeg_8/jpeg_full_compressor_CUDA.c
+        cuda_jpeg_8/kernels/fullCUDA.cu
+        cuda_jpeg_8/kernels/fullCUDA.h
+        cuda_jpeg_8/kernels/dctCUDAv2.cu
+        cuda_jpeg_8/kernels/dctCUDAv2.h
+        cuda_jpeg_8/jpeg_writer.c
+        )
+
+target_link_libraries(cuda_full_jpeg_compressor m)
+
+cuda_add_executable(cuda_jpeg_benchmark
+        cuda_jpeg_8/dct.c
+        cuda_jpeg_8/bmp_loader.c
+        cuda_jpeg_8/ycc_converter.c
+        cuda_jpeg_8/timer.c
+        cuda_jpeg_8/huffman.c
+        cuda_jpeg_8/quantization.c
+        cuda_jpeg_8/cuda_jpeg_benchmark.c
+        cuda_jpeg_8/kernels/dctCUDAv2.cu
+        cuda_jpeg_8/kernels/dctCUDAv2.h
+        )
+
+target_link_libraries(cuda_jpeg_benchmark m)
+
+cuda_add_executable(cuda_full_jpeg_benchmark
+        cuda_jpeg_8/dct.c
+        cuda_jpeg_8/bmp_loader.c
+        cuda_jpeg_8/ycc_converter.c
+        cuda_jpeg_8/timer.c
+        cuda_jpeg_8/huffman.c
+        cuda_jpeg_8/quantization.c
+        cuda_jpeg_8/cuda_full_jpeg_benchmark.c
+        cuda_jpeg_8/kernels/fullCUDA.cu
+        cuda_jpeg_8/kernels/fullCUDA.h
+        cuda_jpeg_8/kernels/dctCUDAv2.cu
+        cuda_jpeg_8/kernels/dctCUDAv2.h
+        )
+
+target_link_libraries(cuda_full_jpeg_benchmark m)
